--- a/Docker/Dockerfile-postgres
+++ b/Docker/Dockerfile-postgres
@@ -9,5 +9,9 @@ RUN	cd / ; \
 	echo "GRANT ALL privileges ON DATABASE flexberry TO flexberryuser;" >> create.sql ; \
 	until psql -U postgres <create.sql; do echo "Wait...";sleep 2; done ; \
 	until psql -U flexberryuser -d flexberry < PostgreSql.create.sql; do echo "Wait...";sleep 5; done ; \
-	/etc/init.d/postgresql stop;  while su -c psql postgres </dev/null >/dev/null 2>&1; do sleep 1; done;  \
+	/etc/init.d/postgresql stop; \
+  sleep 5; \
+  while [ -f /var/lib/pgsql/data/postmaster.pid ]; do sleep 5; done; \
+  killall postgres; \
+  while [ -f /tmp/.s.PGSQL.5432.lock ]; do sleep 5; done; \
 	echo "postgresql stopped"
